--- a/frontend/static/html/model-b.html
+++ b/frontend/static/html/model-b.html
@@ -148,14 +148,14 @@
 
 
     <!-- REQUERY title component -->
-    <template class="report-component report-title">
+    <template class="report-component dataviz" id="dvz-title" data-ref="title">
         <div class="report-component.title">
             <h1 id="{{dataviz}}" class="dataviz report-title"></h1>
         </div>
     </template>
 
     <!-- REQUERY figure component -->
-    <template class="report-component report-figure">
+    <template class="report-component dataviz" id="dvz-figure" data-ref="figure">
         <div class="report-component.figure card-body">
             <div id="{{dataviz}}" class="dataviz report-figure custom-icon icon-default">
                 <figure>
@@ -167,7 +167,7 @@
     </template>
 
     <!-- REQUERY chart component -->
-    <template class="report-component report-chart">
+    <template class="report-component dataviz" id="dvz-chart" data-ref="chart">
         <div class="report-component.chart full-width">
             <div class="report-dataviz-title" >Titre</div>
             <div id="{{dataviz}}" data-title="Titre" data-description="Description" class="dataviz report-chart"></div>
@@ -176,7 +176,7 @@
     </template>
 
     <!-- REQUERY table component -->
-    <template class="report-component report-table">
+    <template class="report-component dataviz" id="dvz-table" data-ref="table">
         <div class="report-component.chart card-body">
             <div class="report-dataviz-title" >Titre</div>
             <div id="{{dataviz}}" class="dataviz report-table"></div>
@@ -184,7 +184,7 @@
         </div>
     </template>
     <!-- REQUERY text component -->
-    <template class="report-component report-text">
+    <template class="report-component dataviz" id="dvz-text" data-ref="text">
         <div class="report-component.text card-body">
             <div id="{{dataviz}}" class="dataviz report-text">
                 <h3 class="report-text-title"></h3>
@@ -193,7 +193,7 @@
         </div>
     </template>
     <!-- REQUERY image component -->
-    <template class="report-component report-image">
+    <template class="report-component dataviz" id="dvz-image" data-ref="image">
         <div class="report-component.image card-body">
             <div id="{{dataviz}}" class="dataviz report-image">
                 <img src="" class="img-fluid" alt="" />
@@ -201,13 +201,13 @@
         </div>
     </template>
     <!-- REQUERY map component -->
-    <template class="report-component report-map">
+    <template class="report-component dataviz" id="dvz-map" data-ref="map">
         <div class="report-component.map card-body">
             <div id="{{dataviz}}" class="dataviz report-map"></div>
         </div>
     </template>
     <!-- REQUERY iframe component -->
-    <template class="report-component report-iframe">
+    <template class="report-component dataviz" id="dvz-iframe" data-ref="iframe">
         <div class="report-component.iframe card-body">
             <div id="{{dataviz}}" class="dataviz report-iframe .hidden-md-down embed-responsive embed-responsive-16by9">
             </div>
