--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -18,7 +18,7 @@
     <template class="report-structure" id="bsimple">
         <div class="bloc-structure" data-label="Bloc simple" data-description="Bloc contenu uniquement">
             <div class="bloc-layout container-fluid layout-rows">
-                <div class="row layout-cols layout-fixed">
+                <div class="row layout-cols fixed-layout">
                     <div class="col-12 layout-cell">
                         <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
                     </div>
@@ -34,7 +34,7 @@
                 <!-- this text is editable in composer -->Titre du bloc
             </div>
             <div class="bloc-layout container-fluid layout-rows">
-                <div class="row layout-cols layout-fixed">
+                <div class="row layout-cols fixed-layout">
                     <div class="col-12 layout-cell">
                         <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
                     </div>
@@ -53,7 +53,7 @@
                 <!-- this text is editable in composer -->Titre du bloc
             </div>
             <div class="bloc-layout container-fluid layout-rows">
-                <div class="row layout-cols layout-fixed">
+                <div class="row layout-cols fixed-layout">
                     <div class="col-6 layout-cell">
                         <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
                     </div>
@@ -75,7 +75,7 @@
                 <!-- this text is editable in composer -->Titre du bloc
             </div>
             <div class="bloc-layout container-fluid layout-rows">
-                <div class="row layout-cols layout-fixed">
+                <div class="row layout-cols fixed-layout">
                     <div class="col-4 layout-cell">
                         <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
                     </div>
@@ -100,7 +100,7 @@
                 <!-- this text is editable in composer -->Titre du bloc
             </div>
             <div class="bloc-layout container-fluid layout-rows">
-                <div class="row layout-cols layout-fixed">
+                <div class="row layout-cols fixed-layout">
                     <div class="col-4 layout-cell">
                         <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
                     </div>
@@ -108,12 +108,12 @@
                         <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
                     </div>
                     <div class="col-4 layout-rows">
-                        <div class="row layout-cols layout-fixed">
+                        <div class="row layout-cols fixed-layout">
                             <div class="col-12 layout-cell">
                                 <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
                             </div>
                         </div>
-                        <div class="row layout-cols layout-fixed">
+                        <div class="row layout-cols fixed-layout">
                             <div class="col-12 layout-cell">
                                 <ul class="component-container list-group"><!--dataviz|element component is injected here --></ul>
                             </div>
@@ -130,7 +130,7 @@
 
     <template class="report-element" id="btexte">
         <div class="bloc-element" data-label="Composant texte" data-description="Bloc texte">
-            <div class="bloc-layout editable-text">
+            <div class="bloc-content editable-text">
                 <!-- this text is editable in composer -->Texte de l'élément
             </div>
         </div>
